Initialize package.json for frontend project

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,3 +1,16 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:3c52d4123aae38f83dc48cf073df965c361d5bafb0e2485a1ed62aa1bdbe0150
-size 337
+{
+  "name": "ai-fswd-proj",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.1"
+  }
+}
